--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -5,7 +5,7 @@
 
 body {
   font-family: "ITC Serif Gothic", Lato !important;
-
+  overflow-x: hidden;
 }
 
 main {
